# MSCKF_Filter

./: README.md
MSCKF_ws/.catkin_tools/profiles/default/: devel_collisions.txt
MSCKF_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
MSCKF_ws/devel/.private/MSCKF_Filter/: setup.sh
MSCKF_ws/devel/.private/MSCKF_Filter/lib/pkgconfig/: MSCKF_Filter.pc
MSCKF_ws/devel/.private/MSCKF_Filter/share/MSCKF_Filter/cmake/: MSCKF_FilterConfig.cmake
MSCKF_ws/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
MSCKF_ws/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
MSCKF_ws/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
MSCKF_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
MSCKF_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
MSCKF_ws/logs/MSCKF_Filter/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.002.log.stderr  build.make.000.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr
MSCKF_ws/src/MSCKF_Filter/: CMakeLists.txt  package.xml
MSCKF_ws/src/MSCKF_Filter/include/MSCKF_Filter/: MSCK_EKF.h  MSCK_Feature.h  MSCK_Filter.h  MSCK_Node.h  MSCK_Types.h  math_utils.h  tracking_descriptor.h  tracking_nodelet.h  types.hpp
MSCKF_ws/src/MSCKF_Filter/launch/: msckf.launch
MSCKF_ws/src/MSCKF_Filter/msg/: Feature.msg
MSCKF_ws/src/MSCKF_Filter/rviz/: euroc.rviz  euroc_rviz.rviz
MSCKF_ws/src/MSCKF_Filter/src/: MSCK_EKF.cpp  MSCK_Feature.cpp  MSCK_Filter.cpp  MSCK_Filter.h  MSCK_Node.cpp  MSCK_Node.h  ex1_MSCKfilter.cpp  main_MSCKfilter.cpp  tracking_descriptor.cpp  tracking_node.cpp  tracking_nodelet.cpp
MSCKF_ws/src/MSCKF_Filter/src_old/: MSCK_FTest.cpp  MSCK_Filter_old.cpp  MSCK_Filter_old.h
MSCKF_ws/src/MSCKF_V1/: CMakeLists.txt  package.xml
MSCKF_ws/src/MSCKF_V1/include/MSCKF_V1/: EKF.hpp  estimation.hpp  feature_tracking_nodelet.hpp  msckf_nodelet.hpp  types.hpp  util.hpp
